# chatty

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
src/: ai.rs  app.rs  app_state.rs  handler.rs  lib.rs  main.rs  old_ui.rs  terminal_utils.rs  tracing.rs  tui.rs  ui.rs
src/services/: chat_service.rs  event_service.rs  mod.rs  ui_service.rs  widget.rs
src/widgets/: terminal.rs
