[package]
name = "terminal-ai-ops"
version = "0.1.0"
authors = ["Jonas Krüger Svensson <jonas.svensson@intility.no>"]
license = "MIT"
edition = "2021"

[dependencies]
async-openai = "0.23.3"
bytes = "1.6.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
portable-pty = "0.8.1"
ratatui = "0.26.3"
throbber-widgets-tui = "0.5.0"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
tui-term = "0.1.11"
vt100 = "0.15.2"
