[package]
name = "terminal-ai-ops"
version = "0.1.0"
authors = ["Jonas Krüger Svensson <jonas.svensson@intility.no>"]
license = "MIT"
edition = "2021"

[dependencies]
async-openai = "0.23.4"
bytes = "1.7.1"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.30"
portable-pty = "0.8.1"
ratatui = {version = "0.28.0", features = ["unstable-rendered-line-info"]}
throbber-widgets-tui = "0.7.0"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
tui-term = "0.1.13"
vt100 = "0.15.2"
